# click-once

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
src/: logging.rs  main.rs  tray.rs
