[package]
authors = ["j-hc"]
name = "click-once"
version = "0.2.6"
edition = "2021"

[features]
default = ["tray"]

# Create a tray icon while the program is running.
tray = [
    "dep:tray-icon",
    "dep:winit",
    "std",
    "windows-sys/Win32_System_LibraryLoader",
]

# Build with Rust standard library available, simplifies code but increases the binary size.
std = []


[dependencies.tray-icon]
version = "0.19.0"
optional = true

[dependencies.winit]
version = "0.30.5"
optional = true

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Environment",
    "Win32_System_Threading",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = "z"
