[package]
authors = ["j-hc"]
name = "click-once"
version = "0.2.6"
edition = "2021"

[features]
default = ["logging"]

# Create a tray icon while the program is running.
tray = [
    "dep:tray-icon",
    "dep:winit",
    "std",
    "windows-sys/Win32_System_LibraryLoader",
]

# Write logging info to a terminal window. (Doesn't affect binary size measurably.)
logging = ["dep:itoa", "windows-sys/Win32_System_Console"]

# Build with Rust standard library available, simplifies code but increases the binary size.
std = []


[dependencies.tray-icon]
# System tray icon
version = "0.19.0"
optional = true

[dependencies.winit]
# Event loop
version = "0.30.5"
optional = true

[dependencies.itoa]
# Integer to string conversion (implementation comes straight from libcore but avoids the performance penalty of going through core::fmt::Formatter).
version = "1.0"
optional = true

[dependencies.windows-sys]
# Bindings to Windows API
version = "0.59"
features = [
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Environment",
    "Win32_System_Threading",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = "z"
